--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.6.3",
     "stream-chat": "^9.12.0",
     "stream-chat-react": "^13.3.0",
+    "streamify": "file:..",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
